--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
   "jest": {
     "collectCoverage": true
   },
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
-    "gulp": "^3.9.1"
-  },
-  "devDependencies": {
+    "gulp": "^3.9.1",
     "gulp-exec": "^3.0.1",
     "jest": "^22.4.2",
     "last-commit-log": "^1.0.3"
