Update to match schema

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.2.1-0",
   "description": "",
   "main": "lib/index.js",
-  "files": "lib/**/*",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
     "build": "babel --out-dir lib src --ignore **/*.spec.js,**/*.test.js",
     "clean": "npx rimraf lib",
