--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: node_js
 node_js:
   - "9"
+  - "10"
 before_script:
   - npm run build
 before_deploy:
   - git config --local user.name "William Wong"
   - git config --local user.email "compulim@hotmail.com"
-  - npm run versionCommit
+  - npx version-from-git --travis
 deploy:
   - provider: npm
     api_key:
