--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "babel --out-dir lib src --ignore **/*.spec.js,**/*.test.js",
     "clean": "npx rimraf lib",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "versionCommit": "npx gulp-cli version-commit",
     "test": "jest"
   },
@@ -39,6 +40,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-add-module-exports": "^1.0.0",
+    "coveralls": "^3.0.2",
     "jest": "^23.6.0"
   }
 }
