--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "babel --out-dir lib src --ignore **/*.spec.js,**/*.test.js",
     "clean": "npx rimraf lib",
-    "versionCommit": "npx gulp-cli version-commit",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "jest"
   },
   "repository": {
@@ -17,8 +17,11 @@
     "url": "git+https://github.com/compulim/simple-update-in.git"
   },
   "keywords": [
+    "asynchronous",
     "immutable",
+    "predicate",
     "update",
+    "updater",
     "update-in"
   ],
   "author": "William Wong <compulim@hotmail.com> (http://compulim.info/)",
@@ -39,6 +42,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-plugin-add-module-exports": "^1.0.0",
+    "coveralls": "^3.0.2",
     "jest": "^23.6.0"
   }
 }
