--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-update-in",
-  "version": "1.4.1-0",
+  "version": "2.0.0",
   "description": "",
   "main": "lib/index.js",
   "files": [
