--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-update-in",
-  "version": "2.0.1",
+  "version": "2.0.2-0",
   "description": "",
   "browser": "dist/simple-update-in.production.min.js",
   "main": "lib/index.js",
