--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-plugin-add-module-exports": "^1.0.2",
     "coveralls": "^3.0.5",
     "jest": "^24.8.0",
+    "regenerator-runtime": "^0.13.2",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-uglify": "^6.0.2"
